# ompl_catkin

./: CMakeLists.txt  README.md  package.xml
cmake/: ompl-extras.cmake.in
patch/: bugfix.patch
